@@ -11,12 +11,16 @@ import com.lifu.wsms.reload.dto.response.ApiResponse;
 import com.lifu.wsms.reload.dto.response.FailureResponse;
 import com.lifu.wsms.reload.dto.response.SuccessResponse;
 import com.lifu.wsms.reload.dto.response.finance.StudentAccountBalanceResponse;
+import com.lifu.wsms.reload.dto.response.finance.StudentAccountBalanceResponses;
+import com.lifu.wsms.reload.dto.response.student.StudentResponse;
+import com.lifu.wsms.reload.dto.response.student.StudentResponses;
 import com.lifu.wsms.reload.entity.finance.AccountBalance;
 import com.lifu.wsms.reload.entity.student.Student;
 import com.lifu.wsms.reload.mapper.CreateStudentRequestToStudentMapper;
 import com.lifu.wsms.reload.mapper.StudentToStudentResponseMapper;
 import com.lifu.wsms.reload.repository.AccountRepository;
 import com.lifu.wsms.reload.repository.StudentRepository;
+import com.lifu.wsms.reload.service.ApiService;
 import io.vavr.control.Either;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -33,8 +37,8 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import static com.lifu.wsms.reload.api.AppUtil.*;
-import static com.lifu.wsms.reload.service.student.StudentRecordService.buildErrorResponse;
-import static com.lifu.wsms.reload.service.student.StudentRecordService.buildSuccessResponse;
+import static com.lifu.wsms.reload.service.ApiService.buildErrorResponse;
+import static com.lifu.wsms.reload.service.ApiService.buildSuccessResponse;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -46,7 +50,7 @@ public class StudentRecord implements StudentService {
     @Transactional
     @Override
     public Either<FailureResponse, SuccessResponse> createStudent(CreateStudentRequest createStudentRequest) {
-        return StudentRecordService.validateCreateStudent(createStudentRequest)
+        return ApiService.validateCreateStudent(createStudentRequest)
                 .fold(Either::left, validatedRequest -> createStudentAndAccount(createStudentRequest));
     }
 
@@ -71,10 +75,10 @@ public class StudentRecord implements StudentService {
     @Override
     public Either<FailureResponse, SuccessResponse> updateStudent(UpdateStudentRequest updateStudentRequest) {
         try {
-            return StudentRecordService.validateUpdateStudent(updateStudentRequest)
+            return ApiService.validateUpdateStudent(updateStudentRequest)
                     .map(result -> {
                         return studentRepository.findByStudentId(updateStudentRequest.getStudentId())
-                                .map(student -> studentRepository.save(StudentRecordService.populateStudentForUpdate(student, updateStudentRequest)))
+                                .map(student -> studentRepository.save(ApiService.populateStudentForUpdate(student, updateStudentRequest)))
                                 .orElseThrow(() -> new RuntimeException("Student record update failed"));
                     })
                     .map(student -> buildSuccessResponse(objectMapper.valueToTree(StudentToStudentResponseMapper.INSTANCE.toStudentResponse(student)),
@@ -112,11 +116,15 @@ public class StudentRecord implements StudentService {
     @Override
     public Either<FailureResponse, SuccessResponse> findAllStudents(int pageNumber, int pageSize) {
         try {
-            return buildSuccessResponse(AppUtil.convertListToJsonNode(
-                            studentRepository.findAll(PageRequest.of(pageNumber, pageSize)).getContent()
-                                    .stream()
-                                    .map(StudentToStudentResponseMapper.INSTANCE::toStudentResponse)
-                                    .collect(Collectors.toList())),
+            List<StudentResponse> studentResponses = studentRepository.findAll(PageRequest.of(pageNumber, pageSize)).getContent()
+                    .stream()
+                    .map(StudentToStudentResponseMapper.INSTANCE::toStudentResponse)
+                    .toList();
+            return buildSuccessResponse(objectMapper.valueToTree(
+                            StudentResponses.builder()
+                                    .students(studentResponses)
+                                    .totalCount(studentRepository.count())
+                                    .build()),
                     HttpStatus.OK, TRANSACTION_SUCCESS_CODE);
         } catch (DataAccessException e) {
             log.error("Fetch students request error => {}", e.getMessage());
@@ -132,7 +140,7 @@ public class StudentRecord implements StudentService {
                             .stream()
                             .map(objects -> {
                                 StudentAccountBalanceResponse studentAccountBalanceResponse =
-                                        StudentRecordService.getStudentAccountBalanceResponseFromObjects(objects);
+                                        ApiService.getStudentAccountBalanceResponseFromObjects(objects);
                                 return buildSuccessResponse(objectMapper.valueToTree(studentAccountBalanceResponse),
                                         HttpStatus.OK, TRANSACTION_OKAY_CODE).get();
                             })
@@ -149,8 +157,12 @@ public class StudentRecord implements StudentService {
     public Either<FailureResponse, SuccessResponse> findAllStudentAndAccounts(int pageNumber, int pageSize) {
         try {
             Page<Object[]> pagedResults = studentRepository.findAllStudentsAndAccountBalances(PageRequest.of(pageNumber, pageSize));
-            List<StudentAccountBalanceResponse> studentAccountBalanceResponses =
-                    StudentRecordService.getStudentAccountBalanceResponseFromObjectList(pagedResults);
+            List<StudentAccountBalanceResponse> studentAccountBalanceResponseList =
+                    ApiService.getStudentAccountBalanceResponseFromObjectList(pagedResults);
+            var studentAccountBalanceResponses = StudentAccountBalanceResponses.builder()
+                    .studentAccounts(studentAccountBalanceResponseList)
+                    .totalCount(studentRepository.count())
+                    .build();
 
             return buildSuccessResponse(objectMapper.valueToTree(studentAccountBalanceResponses),
                     HttpStatus.OK, TRANSACTION_OKAY_CODE);
